@@ -2,7 +2,9 @@ package de.mbs.gallery.client;
 
 public abstract class Constants {
 	
+	private Constants() {}
+	
 	public static String SESSION_COOKIE_NAME = "PHPSESSID";
 	
-	public static Integer SHOW_ERROR_SCHEDULE_TIME_IN_MS = new Integer(1000);
+	public static Integer SHOW_ERROR_SCHEDULE_TIME_IN_MS = Integer.valueOf(1000);
 }
